--- a/qualtrics/pleasure.html
+++ b/qualtrics/pleasure.html
@@ -31,7 +31,7 @@
                     </g>
                 </g>
             </svg>
-            <td>'+cont.innerHTML+'</td>
+            <td style="width:99%">'+cont.innerHTML+'</td>
             <td align="left">
                 <svg version="1.1" viewBox="0 0 77.952756 77.952756" xmlns="http://www.w3.org/2000/svg" width="75px" height="75px">
                     <g transform="translate(0 -974.41)">
